Deploy latest version of PFS documents c10f4a6735f91cdcaf0d54bfa1025f41bb4c9481

--- a/latest/ST.html
+++ b/latest/ST.html
@@ -495,9 +495,10 @@ on measurement traceability</a></li>
 uncertainty.</li>
 </ol>
 <hr />
-<h4 data-label="|General Metadata: Metadata Machine Readability" id="sec:meta.metadata-machine-readability-st"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/machine-readability-st.yaml--><code>1.2.</code>
+<h4 data-label="|General Metadata: Metadata Machine Readability" id="sec:meta.metadata-machine-readability-optical"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/machine-readability-optical.yaml--><code>1.2.</code>
 Metadata Machine Readability</h4>
-<p>Identifier: <code>meta.metadata-machine-readability-st</code></p>
+<p>Identifier:
+<code>meta.metadata-machine-readability-optical</code></p>
 <h5 id="threshold-requirements-1">Threshold requirements:</h5>
 <p>Metadata is provided in a structure that enables a computer algorithm
 to be used to consistently and automatically identify and extract each
@@ -532,18 +533,18 @@ polygon. The location to which each pixel refers is identified (or can
 be reliably determined) expressed in projection coordinates with
 reference datum.</p>
 <hr />
-<h4 data-label="|General Metadata: Coordinate Reference System" id="sec:meta.metadata-crs-st"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/crs-st.yaml--><code>1.5.</code>
+<h4 data-label="|General Metadata: Coordinate Reference System" id="sec:meta.metadata-crs-optical"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/crs-optical.yaml--><code>1.5.</code>
 Coordinate Reference System</h4>
-<p>Identifier: <code>meta.metadata-crs-st</code></p>
+<p>Identifier: <code>meta.metadata-crs-optical</code></p>
 <h5 id="threshold-requirements-4">Threshold requirements:</h5>
 <p>The metadata lists the coordinate reference system that has been
 used.</p>
 <h5 id="goal-requirements-4">Goal requirements:</h5>
 <p>As threshold. <!-- *None* --></p>
 <hr />
-<h4 data-label="|General Metadata: Map Projection" id="sec:meta.metadata-map-projection"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/map-projection.yaml--><code>1.6.</code>
+<h4 data-label="|General Metadata: Map Projection" id="sec:meta.metadata-map-projection-st"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/map-projection-st.yaml--><code>1.6.</code>
 Map Projection</h4>
-<p>Identifier: <code>meta.metadata-map-projection</code></p>
+<p>Identifier: <code>meta.metadata-map-projection-st</code></p>
 <h5 id="threshold-requirements-5">Threshold requirements:</h5>
 <p>Not required. <!-- *None* --></p>
 <h5 id="goal-requirements-5">Goal requirements:</h5>
@@ -551,10 +552,10 @@ Map Projection</h4>
 any relevant parameters required in relation to use of data in that map
 projection.</p>
 <hr />
-<h4 data-label="|General Metadata: Geometric Correction Methods" id="sec:meta.metadata-geometric-correction-methods"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/geometric-correction-methods.yaml--><code>1.7.</code>
+<h4 data-label="|General Metadata: Geometric Correction Methods" id="sec:meta.metadata-geometric-correction-methods-st"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/geometric-correction-methods-st.yaml--><code>1.7.</code>
 Geometric Correction Methods</h4>
 <p>Identifier:
-<code>meta.metadata-geometric-correction-methods</code></p>
+<code>meta.metadata-geometric-correction-methods-st</code></p>
 <h5 id="threshold-requirements-6">Threshold requirements:</h5>
 <p>Not required. <!-- *None* --></p>
 <h5 id="goal-requirements-6">Goal requirements:</h5>
@@ -563,9 +564,9 @@ the metadata as a single DOI landing page containing information on
 geodetic correction methods used, including reference database and
 auxiliary data such as elevation model(s) and reference chip-sets.</p>
 <hr />
-<h4 data-label="|General Metadata: Geometric Accuracy of the Data" id="sec:meta.metadata-geometric-accuracy"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/geometric-accuracy.yaml--><code>1.8.</code>
+<h4 data-label="|General Metadata: Geometric Accuracy of the Data" id="sec:meta.metadata-geometric-accuracy-st"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/geometric-accuracy-st.yaml--><code>1.8.</code>
 Geometric Accuracy of the Data</h4>
-<p>Identifier: <code>meta.metadata-geometric-accuracy</code></p>
+<p>Identifier: <code>meta.metadata-geometric-accuracy-st</code></p>
 <h5 id="threshold-requirements-7">Threshold requirements:</h5>
 <p>Not required. <!-- *None* --></p>
 <h5 id="goal-requirements-7">Goal requirements:</h5>
@@ -581,17 +582,16 @@ root mean square error (RMSE) or Circular Error 90% Probability
 the metadata as a single DOI landing page.</li>
 </ol>
 <hr />
-<h4 data-label="|General Metadata: Instrument" id="sec:meta.metadata-instrument-st"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/instrument-st.yaml--><code>1.9.</code>
+<h4 data-label="|General Metadata: Instrument" id="sec:meta.metadata-instrument-optical"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/instrument-optical.yaml--><code>1.9.</code>
 Instrument</h4>
-<p>Identifier: <code>meta.metadata-instrument-st</code></p>
+<p>Identifier: <code>meta.metadata-instrument-optical</code></p>
 <h5 id="threshold-requirements-8">Threshold requirements:</h5>
 <p>The instrument used to collect the data is identified in the
 metadata.</p>
 <h5 id="goal-requirements-8">Goal requirements:</h5>
-<p>As threshold, but information on instrument should be available in
-the metadata as a single DOI landing page with references to the
-relevant CEOS Missions, Instruments and Measurements Database
-record.</p>
+<p>As threshold, but information should be available in the metadata as
+a single DOI landing page with references to the relevant CEOS Missions,
+Instruments, and Measurements Database record.</p>
 <hr />
 <h4 data-label="|General Metadata: Spectral Bands" id="sec:meta.metadata-spectral-bands"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/spectral-bands.yaml--><code>1.10.</code>
 Spectral Bands</h4>
@@ -611,9 +611,9 @@ provided at least.</p>
 a single DOI landing page.</li>
 </ol>
 <hr />
-<h4 data-label="|General Metadata: Sensor Calibration" id="sec:meta.metadata-sensor-calibration-st"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/sensor-calibration-st.yaml--><code>1.11.</code>
+<h4 data-label="|General Metadata: Sensor Calibration" id="sec:meta.metadata-sensor-calibration-optical"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/sensor-calibration-optical.yaml--><code>1.11.</code>
 Sensor Calibration</h4>
-<p>Identifier: <code>meta.metadata-sensor-calibration-st</code></p>
+<p>Identifier: <code>meta.metadata-sensor-calibration-optical</code></p>
 <h5 id="threshold-requirements-10">Threshold requirements:</h5>
 <p>Not required. <!-- *None* --></p>
 <h5 id="goal-requirements-10">Goal requirements:</h5>
@@ -661,9 +661,9 @@ data and methods.</li>
 single DOI landing page.</li>
 </ol>
 <hr />
-<h4 data-label="|General Metadata: Auxiliary Data" id="sec:meta.metadata-auxiliary-data-st"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/auxiliary-data-st.yaml--><code>1.14.</code>
+<h4 data-label="|General Metadata: Auxiliary Data" id="sec:meta.metadata-auxiliary-data-optical"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/auxiliary-data-optical.yaml--><code>1.14.</code>
 Auxiliary Data</h4>
-<p>Identifier: <code>meta.metadata-auxiliary-data-st</code></p>
+<p>Identifier: <code>meta.metadata-auxiliary-data-optical</code></p>
 <h5 id="threshold-requirements-13">Threshold requirements:</h5>
 <p>The metadata identifies the sources of auxiliary data used in the
 generation process, ideally expressed as a single DOI landing page.</p>
@@ -677,9 +677,9 @@ in the metadata as a single DOI landing page and is also available for
 free online download, contemporaneously with the product or through a
 link to the source.</p>
 <hr />
-<h4 data-label="|General Metadata: Processing Chain Provenance" id="sec:meta.metadata-processing-chain-prov"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/processing-chain-prov.yaml--><code>1.15.</code>
+<h4 data-label="|General Metadata: Processing Chain Provenance" id="sec:meta.metadata-processing-chain-prov-st"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/processing-chain-prov-st.yaml--><code>1.15.</code>
 Processing Chain Provenance</h4>
-<p>Identifier: <code>meta.metadata-processing-chain-prov</code></p>
+<p>Identifier: <code>meta.metadata-processing-chain-prov-st</code></p>
 <h5 id="threshold-requirements-14">Threshold requirements:</h5>
 <p>Not required. <!-- *None* --></p>
 <h5 id="goal-requirements-14">Goal requirements:</h5>
@@ -689,9 +689,9 @@ processing chain used to generate the product, including the versions of
 the software used and information on the data collection baseline,
 giving full transparency to the users.</p>
 <hr />
-<h4 data-label="|General Metadata: Data Access" id="sec:meta.metadata-data-access-st"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/data-access-st.yaml--><code>1.16.</code>
+<h4 data-label="|General Metadata: Data Access" id="sec:meta.metadata-data-access"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/data-access.yaml--><code>1.16.</code>
 Data Access</h4>
-<p>Identifier: <code>meta.metadata-data-access-st</code></p>
+<p>Identifier: <code>meta.metadata-data-access</code></p>
 <h5 id="threshold-requirements-15">Threshold requirements:</h5>
 <p>Information on data access should be available in the metadata as a
 single DOI landing page.</p>
@@ -703,9 +703,9 @@ required.</li>
 <h5 id="goal-requirements-15">Goal requirements:</h5>
 <p>As threshold. <!-- *None* --></p>
 <hr />
-<h4 data-label="|General Metadata: Overall Data Quality" id="sec:meta.metadata-data-quality"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/data-quality.yaml--><code>1.17.</code>
+<h4 data-label="|General Metadata: Overall Data Quality" id="sec:meta.metadata-data-quality-st"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/data-quality-st.yaml--><code>1.17.</code>
 Overall Data Quality</h4>
-<p>Identifier: <code>meta.metadata-data-quality</code></p>
+<p>Identifier: <code>meta.metadata-data-quality-st</code></p>
 <h5 id="threshold-requirements-16">Threshold requirements:</h5>
 <p>Not required. <!-- *None* --></p>
 <h5 id="goal-requirements-16">Goal requirements:</h5>
@@ -723,9 +723,10 @@ provider. Per-pixel metadata should allow users to discriminate between
 (choose) observations on the basis of their individual suitability for
 applications.</p>
 <p><em>Cloud optimized file formats are recommended.</em></p>
-<h4 data-label="|Per-Pixel Metadata: Metadata Machine Readability" id="sec:pxl.metadata-machine-readability-st2"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/machine-readability-st2.yaml--><code>2.1.</code>
+<h4 data-label="|Per-Pixel Metadata: Metadata Machine Readability" id="sec:pxl.metadata-machine-readability-per-pixel-optical"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/machine-readability-per-pixel-optical.yaml--><code>2.1.</code>
 Metadata Machine Readability</h4>
-<p>Identifier: <code>pxl.metadata-machine-readability-st2</code></p>
+<p>Identifier:
+<code>pxl.metadata-machine-readability-per-pixel-optical</code></p>
 <h5 id="threshold-requirements-17">Threshold requirements:</h5>
 <p>Metadata is provided in a structure that enables a computer algorithm
 to be used to consistently and automatically identify and extract each
@@ -750,7 +751,8 @@ Incomplete Testing</h4>
 have not all been successfully completed.</p>
 <p>Notes:</p>
 <ol type="1">
-<li>e.g., due to missing ancillary data for some pixels.</li>
+<li>This may be the result of missing ancillary data for a subset of the
+pixels.</li>
 </ol>
 <h5 id="goal-requirements-19">Goal requirements:</h5>
 <p>The metadata identifies which tests have, and have not, been
@@ -785,9 +787,9 @@ shadow.</p>
 <p>As threshold, but information on cloud shadow detection should be
 available in the metadata as a single DOI landing page.</p>
 <hr />
-<h4 data-label="|Per-Pixel Metadata: Snow/Ice mask" id="sec:pxl.per-pixel-snow-ice"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/per-pixel/snow-ice.yaml--><code>2.7.</code>
-Snow/Ice mask</h4>
-<p>Identifier: <code>pxl.per-pixel-snow-ice</code></p>
+<h4 data-label="|Per-Pixel Metadata: Snow/Ice Mask" id="sec:pxl.per-pixel-snow-ice-sr"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/per-pixel/snow-ice-sr.yaml--><code>2.7.</code>
+Snow/Ice Mask</h4>
+<p>Identifier: <code>pxl.per-pixel-snow-ice-sr</code></p>
 <h5 id="threshold-requirements-23">Threshold requirements:</h5>
 <p>Not required. <!-- *None* --></p>
 <h5 id="goal-requirements-23">Goal requirements:</h5>
@@ -795,9 +797,9 @@ Snow/Ice mask</h4>
 or not. Information on snow/ice mask should be available in the metadata
 as a single DOI landing page.</p>
 <hr />
-<h4 data-label="|Per-Pixel Metadata: Solar and Viewing Geometry" id="sec:pxl.per-pixel-solar-view-angles"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/per-pixel/solar-view-angles.yaml--><code>2.8.</code>
+<h4 data-label="|Per-Pixel Metadata: Solar and Viewing Geometry" id="sec:pxl.per-pixel-view-angles-solar"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/per-pixel/view-angles-solar.yaml--><code>2.8.</code>
 Solar and Viewing Geometry</h4>
-<p>Identifier: <code>pxl.per-pixel-solar-view-angles</code></p>
+<p>Identifier: <code>pxl.per-pixel-view-angles-solar</code></p>
 <h5 id="threshold-requirements-24">Threshold requirements:</h5>
 <p>Provide average solar and sensor viewing azimuth and zenith
 angles.</p>
@@ -859,26 +861,26 @@ geolocate the measurement) allowing measurements taken through time to
 be compared. This section specifies any geometric correction
 requirements that must be met in order for the data to be analysis
 ready.</p>
-<h4 data-label="|Geometric Corrections: Geometric Correction" id="sec:gcor.corrections-geometric"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/corrections/geometric.yaml--><code>4.1.</code>
+<h4 data-label="|Geometric Corrections: Geometric Correction" id="sec:gcor.corrections-geometric-st"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/corrections/geometric-st.yaml--><code>4.1.</code>
 Geometric Correction</h4>
-<p>Identifier: <code>gcor.corrections-geometric</code></p>
+<p>Identifier: <code>gcor.corrections-geometric-st</code></p>
 <h5 id="threshold-requirements-28">Threshold requirements:</h5>
 <p>Sub-pixel accuracy is achieved in <strong>relative</strong>
 geolocation, that is, the pixels from the same instrument and platform
-are consistently located, and in thus comparable, through time.</p>
+are consistently located, and are thus comparable, through time.</p>
 <p>Sub-pixel accuracy is taken to be less than or equal to 0.5 pixel
 radial root mean square error (rRMSE) or equivalent in Circular Error
 Probability (CEP) relative to a defined reference image.</p>
 <p>A consistent gridding/sampling frame is necessary to meet this
 requirement.</p>
-<p>Relevant metadata must be provided under Section “<a href="#sec:meta.metadata-geometric-accuracy">General Metadata: Geometric
-Accuracy of the Data</a>” and Section “<a href="#sec:meta.metadata-instrument-st">General Metadata:
+<p>Relevant metadata must be provided under Section “<a href="#sec:meta.metadata-geometric-accuracy-st">General Metadata:
+Geometric Accuracy of the Data</a>” and Section “<a href="#sec:meta.metadata-instrument-optical">General Metadata:
 Instrument</a>”.</p>
 <p>Notes:</p>
 <ol type="1">
 <li>The threshold level will not necessarily enable interoperability
-between data from different sources as the geometric corrections for
-each of the sources may differ.</li>
+between data from <strong>different</strong> sources as the geometric
+corrections for each of the sources may differ.</li>
 </ol>
 <h5 id="goal-requirements-28">Goal requirements:</h5>
 <p>Sub-pixel accuracy is achieved relative to an identified absolute
@@ -886,8 +888,8 @@ independent terrestrial referencing system (such as a national map
 grid).</p>
 <p>A consistent gridding/sampling frame is necessary to meet this
 requirement.</p>
-<p>Relevant metadata must be provided under Section “<a href="#sec:meta.metadata-geometric-accuracy">General Metadata: Geometric
-Accuracy of the Data</a>” and Section “<a href="#sec:meta.metadata-instrument-st">General Metadata:
+<p>Relevant metadata must be provided under Section “<a href="#sec:meta.metadata-geometric-accuracy-st">General Metadata:
+Geometric Accuracy of the Data</a>” and Section “<a href="#sec:meta.metadata-instrument-optical">General Metadata:
 Instrument</a>”.</p>
 <p>Notes:</p>
 <ol type="1">
