Deploy latest version of PFS documents 02515674c556a1cebf65ea5cee301a1dc8ab6295

--- a/latest/GSLC.html
+++ b/latest/GSLC.html
@@ -245,7 +245,7 @@ Single-Look Complex</p>
 <p>Proposed revisions may be provided to: <a href="mailto:ard-contact@lists.ceos.org">ard-contact@lists.ceos.org</a></p>
 <h2 id="document-history">Document History</h2>
 <p>Not available yet</p>
-<h2 id="contributing-authors"><!-- edit:pfs/SAR-GSLC/authors.yaml -->Contributing
+<h2 id="contributing-authors"><!-- edit:pfs/GSLC/authors.yaml -->Contributing
 Authors</h2>
 <ul>
 <li>François Charbonneau, Natural Resources Canada, Canada</li>
@@ -288,9 +288,9 @@ that allows immediate analysis with a minimum of additional user effort
 and interoperability both through time and with other datasets.</p>
 </blockquote>
 <h2 id="description">Description</h2>
-<!-- edit:pfs/SAR-GSLC/document.yaml -->
+<!-- edit:pfs/GSLC/document.yaml -->
 <p><strong>Product Family Specification:</strong> Synthetic Aperture
-Radar, Geocoded Single-Look Complex (SAR-GSLC)</p>
+Radar, Geocoded Single-Look Complex (GSLC)</p>
 <p><strong>Version:</strong> 1.2-draft</p>
 <p><strong>Applies to:</strong> Data collected by Synthetic Aperture
 Radar sensors</p>
@@ -569,7 +569,7 @@ specifications.
 </dd>
 </dl>
 <div style="page-break-after: always;"></div>
-<h2 id="requirements"><!-- edit:pfs/SAR-GSLC/requirements.yaml -->Requirements</h2>
+<h2 id="requirements"><!-- edit:pfs/GSLC/requirements.yaml -->Requirements</h2>
 <p><strong>WARNING:</strong> The section numbers in front of the title
 (e.g. 1.1) are not stable and may change or may be removed at any time.
 Do <strong>not</strong> use the numbers to refer back to specific
