Deploy latest version of PFS documents 873a02a8369d87af24304611cb437e6b878e983c

--- a/latest/GSLC.html
+++ b/latest/GSLC.html
@@ -569,7 +569,7 @@ specifications.
 </dd>
 </dl>
 <div style="page-break-after: always;"></div>
-<h2 id="requirements"><!-- edit:pfs/GSLC/requirements.yaml -->Requirements</h2>
+<h2 id="requirements"><!-- edit:pfs/GSLC/document.yaml -->Requirements</h2>
 <p><strong>WARNING:</strong> The section numbers in front of the title
 (e.g. 1.1) are not stable and may change or may be removed at any time.
 Do <strong>not</strong> use the numbers to refer back to specific
