--- a/latest/NRB.html
+++ b/latest/NRB.html
@@ -568,7 +568,7 @@ specifications.
 </dd>
 </dl>
 <div style="page-break-after: always;"></div>
-<h2 id="requirements"><!-- edit:pfs/NRB/requirements.yaml -->Requirements</h2>
+<h2 id="requirements"><!-- edit:pfs/NRB/document.yaml -->Requirements</h2>
 <p><strong>WARNING:</strong> The section numbers in front of the title
 (e.g. 1.1) are not stable and may change or may be removed at any time.
 Do <strong>not</strong> use the numbers to refer back to specific
